<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TernDays</string>
    <string name="widget_desc">今年 Top 3 城市及天数</string>
    <string name="widget_unit_day">天</string>
    <!-- 小组件选择器里的示例数据(不是真实记录) -->
    <string name="widget_preview_year">今年</string>
    <string name="widget_preview_city_1">北京</string>
    <string name="widget_preview_days_1">152</string>
    <string name="widget_preview_city_2">上海</string>
    <string name="widget_preview_days_2">38.5</string>
    <string name="widget_preview_city_3">杭州</string>
    <string name="widget_preview_days_3">21</string>
    <string name="widget_empty">还没有打卡记录</string>
    <!-- 元旦后当年还没有记录(往年有):别让人以为数据丢了 -->
    <string name="widget_empty_new_year">%1$d 年的第一条记录会在下次打卡后出现</string>
</resources>
